Hoja de Trabajo/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api_ht-service
spec:
  selector:
    app: api_ht
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
