Hoja de Trabajo/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api_ht-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "api_ht-cert"
spec:
  rules:
    - host: your-api-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api_ht-service
                port:
                  number: 8080
